<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QPair Property Test</string>
    <string name="action_settings">Settings</string>
    <string name="get_property">Get Property</string>
    <string name="property_name">Property Name</string>
    <string name="property_value">Property Value</string>
    <string name="set_property">Set Property</string>
    <string name="local">Local</string>
    <string name="peer">Peer</string>
    <string name="track_property">Track Property</string>
    <string name="delete_property">Delete Property</string>
    <string name="status">Status:</string>
    <string name="clear_status">Clear Status</string>

</resources>
